# zpdf

./: .gitignore  README.md  build.zig  gen_test.zig
.github/workflows/: deploy.yml
benchmark/: accuracy.py
examples/: basic.py  extract_to_file.py  parallel.py
python/: pyproject.toml
python/tests/: test_zpdf.py
python/zpdf/: __init__.py  _cdef.h  _ffi.py  exceptions.py
src/: bench.zig  capi.zig  compat.zig  decompress.zig  encoding.zig  integration_test.zig  interpreter.zig  layout.zig  main.zig  pagetree.zig  parser.zig  root.zig  simd.zig  testpdf.zig  wapi.zig  xref.zig
web/: index.html  zpdf.wasm
