[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "zpdf"
version = "0.1.0"
description = "High-performance PDF text extraction"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["cffi>=1.15"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zpdf*"]

[tool.setuptools.package-data]
zpdf = ["*.h", "*.so", "*.dylib", "*.dll"]
